--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ header nav ul li a:hover{
 
 header .header-favorite-songs{
   display: none;
-  transition: .5s;
+
 }
 
 @media only screen and (min-width: 1000px){
@@ -200,13 +200,20 @@ header .header-favorite-songs{
     color: black;
     padding: 15px 15px;
     margin: 26px 15px;
+    /*DEFAULT*/
+    transition: all.5s;
+    /*CHROME*/
+    -webkit-transition: all.5s;
+    /*MOZZILA FIREFOX*/
+    -moz-transition: all.5s;
+    /*OPERA*/
+    -o-transition: all.5s;
   }
 
     header .header-favorite-songs:hover{
       background-color: #146eff;
       color: white;
       border: 1px solid #146eff;
-      transition: .5s;
     }
 }
 
@@ -328,6 +335,9 @@ a.fa {
   width: fit-content;
   height: auto;
   transition: transform 0.5s;
+  -webkit-transition: transform 0.5s;
+  -moz-transition: transform 0.5s;
+  -o-transition: transform 0.5s;
 }
 .fa-linkedin {
   background: #303030;
